syntax = "proto3";
import "db.proto";
package Proto;

///////////////////////////////////////////////////////////////

message CmdThread {
    enum CmdType {
        Entity = 0;
        Pool = 1;
        Connect = 2;
    }

    CmdType cmd_type = 1;
}

message CmdApp {
    enum CmdType {
        Info = 0;
    }

    CmdType cmd_type = 1;
}

message AppInfoSync {
	int32 app_id = 1;
	int32 app_type = 2;
	int32 online = 3;
}

message NetworkDisconnect {
    int32 network_type = 1;
    int32 socket = 2;
}

enum NetworkObjectKeyType {
	ObjectKeyTypeNone = 0;
	ObjectKeyTypeAccount = 1;
	ObjectKeyTypeApp = 2;    
}

message NetworkObjectKeyValue {
	int64 key_int64 = 1;
	string key_str = 2;
}

message NetworkObjectKey {
	NetworkObjectKeyType key_type = 1;
	NetworkObjectKeyValue key_value = 2;
}

message NetworkConnect {
    int32 network_type = 1;
    NetworkObjectKey key = 2;
    string ip = 3;
    int32 port = 4;
}

///////////////////////////////////////////////////////////////

message Http {
	string body = 1;
	int32 status_code = 2;
}

///////////////////////////////////////////////////////////////

message CreateComponentParam {
	enum ParamType {
		Int = 0;
		String = 1;
	}

	ParamType type = 1;
	int32 int_param = 2;
	string string_param = 3;
}

message CreateComponent {
    int32 thread_type = 1;
	string class_name = 2;
	bool is_to_all_thread = 3;
	repeated CreateComponentParam params = 4;
}

message RemoveComponent {
	uint64 sn = 1;
}

///////////////////////////////////////////////////////////////

message AccountCheck {
	string account = 1;
	string password = 2;
}

enum AccountCheckReturnCode {
	ARC_OK = 0;
	ARC_UNKONWN = 1;
	ARC_NOT_FOUND_ACCOUNT = 2;
	ARC_PASSWORD_WRONG = 3;
	ARC_LOGGING = 4;	 // 正在登录
	ARC_TIMEOUT = 5;	// 超时
	ARC_ONLINE = 6;		// 已在线		
}

message AccountCheckRs {
	AccountCheckReturnCode return_code = 1;
}

enum LoginHttpReturnCode {
    LHRC_OK = 0;
    LHRC_TIMEOUT = 1;
    LHRC_NOTFOUND = 2; // 没有Login进程
}

message RobotState {
	string account = 1;
	int32 state = 2;
}

message RobotSyncState {
	repeated RobotState states = 1;
}

// 玩家精减信息
message PlayerLittle {
	uint64 sn = 1;
	string name = 2;
	Gender gender = 3;
	int32 level = 4;
}

message PlayerList {
	string account = 1;
	repeated PlayerLittle player = 2;
}

message QueryPlayerList {
	string account = 1;
}

message QueryPlayer {
	uint64 player_sn = 1;
}

message QueryPlayerRs {
	string account = 1;
	Player player = 2;
}

message CreatePlayer {
	string name = 1;
	Gender gender = 2; 
}

enum CreatePlayerReturnCode {
	CPR_Create_OK = 0;
	CPR_Unkonwn = 1;
	CPR_Rename = 2; 
}

message CreatePlayerRs {
	CreatePlayerReturnCode return_code = 2;
}

message CreatePlayerToDB {
	string account = 2;
	Player player = 3;
}

message CreatePlayerToDBRs {
	string account = 1;
	CreatePlayerReturnCode return_code = 2;
}

message SelectPlayer {
	uint64 player_sn = 1;
}

message SelectPlayerRs {

	enum SelectPlayerReturnCode {
		SPRC_OK = 0;
		SPRC_NotFound = 1;
	}

	SelectPlayerReturnCode return_code = 1;
}
message SavePlayer {
	uint64 player_sn = 1;
	Player player = 2;
}